Added % to y-axis values

--- a/src/components/common/backtest/aq-cumret-linechart.html
+++ b/src/components/common/backtest/aq-cumret-linechart.html
@@ -98,9 +98,9 @@
 			                labels: {
 			                    align: 'right',
 			                    x: -3,
-			                    /*formatter: function () {
+			                    formatter: function () {
 			                        return (this.value > 0 ? ' + ' : '') + this.value + '%';
-			                    }*/
+			                    }
 			                },
 
 			                plotLines: [{
@@ -235,9 +235,9 @@
 		                labels: {
 		                    align: 'right',
 		                    x: -3,
-		                    /*formatter: function () {
+		                    formatter: function () {
 		                        return (this.value > 0 ? ' + ' : '') + this.value + '%';
-		                    }*/
+		                    }
 		                },
 
 		                plotLines: [{
@@ -283,9 +283,9 @@
 			                labels: {
 			                    align: 'right',
 			                    x: -3,
-			                    /*formatter: function () {
+			                    formatter: function () {
 			                        return (this.value > 0 ? ' + ' : '') + this.value + '%';
-			                    }*/
+			                    }
 			                },
 			               
 			                height: '60%',
