--- a/src/components/common/backtest/aq-forwardtest-performance-detail-item.html
+++ b/src/components/common/backtest/aq-forwardtest-performance-detail-item.html
@@ -101,11 +101,8 @@
                     value: 0,
                 },
 
-                isPerformanceReady: {
-                    type: Boolean,
-                    value: false,
-                    notify:true,
-                },
+                hasPerformanceData: Boolean,
+                active: Boolean,
 
 			},
 
